# lgtm

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ai-chat-design.md  design.md
src/: __init__.py  analyze.py  config.py  github_client.py  main.py  mcp_server.py  models.py  module_config.py  pdf_export.py  repo.py  report.py
src/chat/: __init__.py  agent.py  tui.py
src/cli/: __init__.py  init_config.py  lgtm.py
src/extractors/: __init__.py  checks.py  comments.py  files.py  prs.py  reviews.py  timeline.py  users.py
src/sentiment/: __init__.py  analyzer.py  categories.py  senticr.py  vader.py
tests/: conftest.py  test_analyze.py  test_chat.py  test_cli_init.py  test_client.py  test_extractors.py  test_main.py  test_mcp_server.py  test_models.py  test_module_config.py  test_repo.py  test_report.py  test_sentiment.py
