[project]
name = "lgtm"
version = "0.1.0"
description = "Meta-analysis of code review patterns"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=18.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.4.3",
    "polars>=1.36.1",
    "rich>=14.2.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.scripts]
extract = "src.main:cli"
analyze = "src.analyze:main"

[project.optional-dependencies]
analysis = [
    "polars>=1.0.0",
    "matplotlib>=3.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
