[project]
name = "lgtm"
version = "0.1.0"
description = "Meta-analysis of code review patterns"
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.27.0",
    "trio>=0.27.0",
    "pyarrow>=18.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.4.3",
    "polars>=1.36.1",
    "rich>=14.2.0",
    "pyjwt[crypto]>=2.10.1",
    "pyyaml>=6.0.3",
    "tomli ; python_full_version < '3.11'",
]

[project.scripts]
lgtm = "src.cli.lgtm:main"

[project.optional-dependencies]
analysis = [
    "polars>=1.0.0",
    "matplotlib>=3.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-trio>=0.8.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
trio_mode = true
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ty.environment]
root = [".", "./src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
